<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">您选择的答案是：</string>
    <string name="app_name">xml布局测试</string>
    <string name="question">中国共产党是哪一年建立的？</string>
    <string name="a">1920年</string>
    <string name="b">1921年</string>
    <string name="c">1922年</string>
    <string name="d">1923年</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="other">otherActivity</string>
</resources>